@@ -2,6 +2,9 @@ linotp (3.1~0dev-0) buster-dev; urgency=low
 
   * Set version 3.1~0dev-0
 
+  Features:
+  * ManageUI policy editor utilizes full window width for improved layout.
+
  -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Thu, 12 Nov 2020 17:48:51 +0200
 
 linotp (3.0~rc2-0dev) buster-dev; urgency=low
